--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "src/CustomComponents.js",
   "dependencies": {
+    "create-react-class": "^15.6.2",
     "fbjs": "~0.8.9",
     "immutable": "~3.7.6",
     "react-timer-mixin": "^0.13.2",
